# HDF5Converter

./: .gitignore  .pre-commit-config.yaml  HDF5Converter.py  HDF5Converter.spec  LICENSE  README.md  create_apps.sh  create_exe.bat  pyproject.toml
hdf5_converter/: __init__.py
hdf5_converter/controller/: __init__.py  converter_controller.py  main_controller.py
hdf5_converter/model/: __init__.py  converter_model.py  main_model.py  qt_worker_model.py
hdf5_converter/view/: __init__.py  converter_view.py  main_view.py  status_view.py
