# ----------------------------------------------------------------------------------
# Project: HDF5Converter
# File: pyproject.toml
# ----------------------------------------------------------------------------------
# Purpose:
# This file is uded to specify the project configuration, metadata, and dependencies
# for the HDF5Converter application.
# ----------------------------------------------------------------------------------
# Author: Christofanis Skordas
#
# Copyright (c) 2025 GSECARS, The University of Chicago
# Copyright (c) 2025 NSF SEES, Synchrotron Earth and Environmental Science
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
# ----------------------------------------------------------------------------------

[build-system]
requires = [
    "setuptools >= 75.8.0",
    "setuptools_scm >= 8.2.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "HDF5Converter"
version = "0.0.1"
authors = [
    {name = "Christofanis Skordas", email = "55315750+skordaschristofanis@users.noreply.github.com"}
]
maintainers = [
    {name = "Christofanis Skordas", email = "55315750+skordaschristofanis@users.noreply.github.com"}
]
description = "HDF5Converter is a Python application for converting HDF5 files to other formats."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.13"
dependencies = [
    "pyqt6>=6.9.0",
    "qtpy>=2.4.3",
    "h5py>=3.13.0",
    "numpy>=2.2.4",
    "scipy>=1.15.2",
    "fabio>=2024.9.0",
    "gsewidgets>=0.0.2"
]

[project.optional-dependencies]
development = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "pre-commit>=4.2.0",
    "setuptools>=75.8.0",
    "setuptools-scm>=8.2.0",
    "pyinstaller==6.10.0"
]

[project.urls]
Homepage = "https://github.com/GSECARS/HDF5Converter"
Issues = "https://github.com/GSECARS/HDF5Converter/issues"

[tool.black]
line-length = 160
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | build
  | dist
)/
'''

[tool.flake8]
exclude = ".git,__pycache__,build,dist"
max-line-length = 160
